packages/svelte/tests/compiler-errors/samples/store-prevent-user-declarations/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-dollar-prefix',
		message: 'The $ prefix is reserved, and cannot be used for variables and imports'
	}
});
